--- a/notebooks/01_EDA_Basico.ipynb
+++ b/notebooks/01_EDA_Basico.ipynb
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Bibliotecas importadas com sucesso!\n",
+      "Bibliotecas importadas com sucesso!\n",
       "Pandas: 2.3.3\n",
       "NumPy: 2.4.1\n"
      ]
@@ -65,18 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Dados carregados com sucesso!\n",
+      "Dados carregados com sucesso!\n",
       "\n",
-      "📊 Usuários: 500 linhas × 9 colunas\n",
-      "📊 Transações: 194231 linhas × 9 colunas\n",
-      "📊 Estatísticas Mensais: 2500 linhas × 12 colunas\n"
+      "- Usuários: 500 linhas × 9 colunas\n",
+      "- Transações: 194231 linhas × 9 colunas\n",
+      "- Estatísticas Mensais: 2500 linhas × 12 colunas\n"
      ]
     }
    ],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
