updated Day 4 Clustering

--- a/notebooks/02_Feature_Engineering.ipynb
+++ b/notebooks/02_Feature_Engineering.ipynb
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1695,20 +1695,22 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "VERIFICAÇÕES FINAIS\n",
+      "VERIFICACOES FINAIS\n",
       "================================================================================\n",
       "\n",
-      "Checklist de Validação:\n",
+      "Checklist de Validacao:\n",
       "\n",
-      "   [OK] Total de usuários = 500\n",
+      "   [OK] Total de usuarios = 500\n",
       "   [OK] Total de colunas = 6 (user_id + 5 features)\n",
       "   [OK] Sem valores nulos\n",
       "   [OK] Sem duplicatas de user_id\n",
       "   [OK] taxa_poupanca entre -1 e 1\n",
       "   [OK] pct_gastos_essenciais entre 0 e 1\n",
-      "   [FALHOU] Todas features numéricas\n",
+      "   [OK] Todas features numericas (5 colunas)\n",
       "\n",
-      "Atenção: Algumas validações falharam. Verifique os dados.\n"
+      "================================================================================\n",
+      "Todas as validacoes passaram. Dataset pronto para clustering.\n",
+      "================================================================================\n"
      ]
     }
    ],
@@ -1753,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1809,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
