updated clusters names

--- a/notebooks/05_Interpretacao_Clusters.ipynb
+++ b/notebooks/05_Interpretacao_Clusters.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "h1i2j3k4",
    "metadata": {},
    "outputs": [
@@ -343,14 +343,16 @@
     "    taxa = medias.loc[cluster_id, 'taxa_poupanca']\n",
     "    renda = medias.loc[cluster_id, 'media_renda']\n",
     "    \n",
-    "    if taxa > 0.15 and renda > renda_media_geral:\n",
+    "    if taxa > 0.15:\n",
     "        return 'Poupadores'\n",
     "    elif taxa > 0 and taxa <= 0.15:\n",
     "        return 'Equilibrados'\n",
-    "    elif taxa < 0 and taxa >= -0.5:\n",
+    "    elif taxa >= -0.25:  # Entre 0% e -25%\n",
     "        return 'Em Alerta'\n",
-    "    else:\n",
-    "        return 'Endividados'\n",
+    "    elif taxa >= -0.65:  # Entre -25% e -65%\n",
+    "        return 'Endividados Moderados'\n",
+    "    else:  # Abaixo de -65%\n",
+    "        return 'Endividados Severos'\n",
     "\n",
     "# Criar mapeamento\n",
     "cluster_names = {c: nomear_cluster(c) for c in medias.index}\n",
@@ -360,7 +362,7 @@
     "for cluster_id, nome in cluster_names.items():\n",
     "    taxa = medias.loc[cluster_id, 'taxa_poupanca'] * 100\n",
     "    qtd = int(medias.loc[cluster_id, 'qtd_usuarios'])\n",
-    "    print(f'Cluster {cluster_id} -> {nome:15} | {qtd:3} usuários | Taxa: {taxa:+.1f}%')\n",
+    "    print(f'Cluster {cluster_id} -> {nome:20} | {qtd:3} usuários | Taxa: {taxa:+.1f}%')\n",
     "\n",
     "# Adicionar ao dataframe\n",
     "df['cluster_nome'] = df['cluster'].map(cluster_names)\n",
@@ -575,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "n1o2p3q4",
    "metadata": {},
    "outputs": [
@@ -667,7 +669,8 @@
     "    'Poupadores': 'Usuários com renda acima da média e boa capacidade de poupança. Potencial para produtos de investimento.',\n",
     "    'Equilibrados': 'Usuários que conseguem manter gastos próximos à renda. Oportunidade para incentivar maior poupança.',\n",
     "    'Em Alerta': 'Usuários com gastos levemente superiores à renda. Necessitam orientação para equilibrar finanças.',\n",
-    "    'Endividados': 'Usuários com gastos muito acima da renda. Prioridade para intervenção e educação financeira.'\n",
+    "    'Endividados Moderados': 'Usuários com gastos significativamente acima da renda. Precisam de plano de corte de gastos e acompanhamento.',\n",
+    "    'Endividados Severos': 'Usuários com gastos muito acima da renda (>65%). Prioridade máxima para intervenção urgente e educação financeira.'\n",
     "}\n",
     "\n",
     "for cluster_id in sorted(medias.index):\n",
