--- a/notebooks/06_Recomendacoes_Review.ipynb
+++ b/notebooks/06_Recomendacoes_Review.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c1d2e3f4",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d1e2f3g4",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Clusters: {np.int64(3): 'Poupadores', np.int64(0): 'Endividados', np.int64(1): 'Em Alerta', np.int64(2): 'Endividados'}\n"
+      "Clusters identificados:\n",
+      "  Cluster 0: Endividados Severos       |  59 usuários | Taxa: -88.6%\n",
+      "  Cluster 1: Em Alerta                 | 196 usuários | Taxa: -14.8%\n",
+      "  Cluster 2: Endividados Moderados     | 167 usuários | Taxa: -57.7%\n",
+      "  Cluster 3: Poupadores                |  78 usuários | Taxa: +25.4%\n"
      ]
     }
    ],
@@ -74,26 +78,33 @@
     "# Juntar transações com clusters\n",
     "df = transacoes.merge(usuarios_cluster[['user_id', 'cluster']], on='user_id')\n",
     "\n",
-    "# Nomear clusters\n",
+    "# Nomear clusters (mesma lógica do notebook 05)\n",
     "medias_cluster = usuarios_cluster.groupby('cluster')['taxa_poupanca'].mean()\n",
-    "renda_media = usuarios_cluster['media_renda'].mean()\n",
     "\n",
-    "def nomear(cluster_id):\n",
+    "def nomear_cluster(cluster_id):\n",
     "    taxa = medias_cluster[cluster_id]\n",
-    "    renda = usuarios_cluster[usuarios_cluster['cluster'] == cluster_id]['media_renda'].mean()\n",
-    "    if taxa > 0.15 and renda > renda_media:\n",
+    "    \n",
+    "    if taxa > 0.15:\n",
     "        return 'Poupadores'\n",
-    "    elif taxa > 0:\n",
+    "    elif taxa > 0 and taxa <= 0.15:\n",
     "        return 'Equilibrados'\n",
-    "    elif taxa >= -0.5:\n",
+    "    elif taxa >= -0.25:  # Entre 0% e -25%\n",
     "        return 'Em Alerta'\n",
-    "    else:\n",
-    "        return 'Endividados'\n",
+    "    elif taxa >= -0.65:  # Entre -25% e -65%\n",
+    "        return 'Endividados Moderados'\n",
+    "    else:  # Abaixo de -65%\n",
+    "        return 'Endividados Severos'\n",
     "\n",
-    "cluster_names = {c: nomear(c) for c in usuarios_cluster['cluster'].unique()}\n",
+    "cluster_names = {c: nomear_cluster(c) for c in usuarios_cluster['cluster'].unique()}\n",
     "df['cluster_nome'] = df['cluster'].map(cluster_names)\n",
+    "usuarios_cluster['cluster_nome'] = usuarios_cluster['cluster'].map(cluster_names)\n",
     "\n",
-    "print('Clusters:', cluster_names)"
+    "print('Clusters identificados:')\n",
+    "for cluster_id in sorted(cluster_names.keys()):\n",
+    "    nome = cluster_names[cluster_id]\n",
+    "    taxa = medias_cluster[cluster_id] * 100\n",
+    "    qtd = len(usuarios_cluster[usuarios_cluster['cluster'] == cluster_id])\n",
+    "    print(f'  Cluster {cluster_id}: {nome:25} | {qtd:3} usuários | Taxa: {taxa:+.1f}%')"
    ]
   },
   {
@@ -106,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f1g2h3i4",
    "metadata": {},
    "outputs": [
@@ -188,20 +199,36 @@
        "      <td>154.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Endividados</th>\n",
-       "      <td>1074.74</td>\n",
-       "      <td>481.45</td>\n",
-       "      <td>290.62</td>\n",
-       "      <td>1058.18</td>\n",
-       "      <td>698.71</td>\n",
-       "      <td>179.67</td>\n",
-       "      <td>184.75</td>\n",
-       "      <td>117.41</td>\n",
-       "      <td>4029.12</td>\n",
-       "      <td>415.37</td>\n",
-       "      <td>177.27</td>\n",
-       "      <td>617.86</td>\n",
-       "      <td>230.25</td>\n",
+       "      <th>Endividados Moderados</th>\n",
+       "      <td>974.76</td>\n",
+       "      <td>432.53</td>\n",
+       "      <td>258.56</td>\n",
+       "      <td>887.82</td>\n",
+       "      <td>620.84</td>\n",
+       "      <td>159.82</td>\n",
+       "      <td>167.86</td>\n",
+       "      <td>103.98</td>\n",
+       "      <td>3836.17</td>\n",
+       "      <td>365.78</td>\n",
+       "      <td>158.67</td>\n",
+       "      <td>562.13</td>\n",
+       "      <td>207.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Endividados Severos</th>\n",
+       "      <td>1357.74</td>\n",
+       "      <td>619.91</td>\n",
+       "      <td>381.36</td>\n",
+       "      <td>1540.41</td>\n",
+       "      <td>919.11</td>\n",
+       "      <td>235.83</td>\n",
+       "      <td>232.53</td>\n",
+       "      <td>155.41</td>\n",
+       "      <td>4575.24</td>\n",
+       "      <td>555.73</td>\n",
+       "      <td>229.91</td>\n",
+       "      <td>775.61</td>\n",
+       "      <td>294.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Poupadores</th>\n",
@@ -224,26 +251,36 @@
        "</div>"
       ],
       "text/plain": [
-       "categoria     Alimentacao_Casa  Alimentacao_Fora  Educacao  Habitacao_Aluguel  \\\n",
-       "cluster_nome                                                                    \n",
-       "Em Alerta               673.04            306.75    187.11             653.22   \n",
-       "Endividados            1074.74            481.45    290.62            1058.18   \n",
-       "Poupadores             1027.50            472.94    287.32             948.24   \n",
+       "categoria              Alimentacao_Casa  Alimentacao_Fora  Educacao  \\\n",
+       "cluster_nome                                                          \n",
+       "Em Alerta                        673.04            306.75    187.11   \n",
+       "Endividados Moderados            974.76            432.53    258.56   \n",
+       "Endividados Severos             1357.74            619.91    381.36   \n",
+       "Poupadores                      1027.50            472.94    287.32   \n",
        "\n",
-       "categoria     Habitacao_Contas  Higiene_Limpeza   Lazer  Outros    Renda  \\\n",
+       "categoria              Habitacao_Aluguel  Habitacao_Contas  Higiene_Limpeza  \\\n",
+       "cluster_nome                                                                  \n",
+       "Em Alerta                         653.22            448.00           114.80   \n",
+       "Endividados Moderados             887.82            620.84           159.82   \n",
+       "Endividados Severos              1540.41            919.11           235.83   \n",
+       "Poupadores                        948.24            682.68           170.35   \n",
+       "\n",
+       "categoria               Lazer  Outros    Renda   Saude  Telecomunicacoes  \\\n",
        "cluster_nome                                                               \n",
-       "Em Alerta               448.00           114.80  113.96   75.36  3827.09   \n",
-       "Endividados             698.71           179.67  184.75  117.41  4029.12   \n",
-       "Poupadores              682.68           170.35  170.53  116.82  8009.04   \n",
+       "Em Alerta              113.96   75.36  3827.09  267.59            115.28   \n",
+       "Endividados Moderados  167.86  103.98  3836.17  365.78            158.67   \n",
+       "Endividados Severos    232.53  155.41  4575.24  555.73            229.91   \n",
+       "Poupadores             170.53  116.82  8009.04  401.48            181.05   \n",
        "\n",
-       "categoria      Saude  Telecomunicacoes  Transporte  Vestuario  \n",
-       "cluster_nome                                                   \n",
-       "Em Alerta     267.59            115.28      359.57     154.14  \n",
-       "Endividados   415.37            177.27      617.86     230.25  \n",
-       "Poupadores    401.48            181.05      564.59     212.20  "
+       "categoria              Transporte  Vestuario  \n",
+       "cluster_nome                                  \n",
+       "Em Alerta                  359.57     154.14  \n",
+       "Endividados Moderados      562.13     207.73  \n",
+       "Endividados Severos        775.61     294.00  \n",
+       "Poupadores                 564.59     212.20  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "g1h2i3j4",
    "metadata": {},
    "outputs": [
@@ -315,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "i1j2k3l4",
    "metadata": {},
    "outputs": [
@@ -351,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "j1k2l3m4",
    "metadata": {},
    "outputs": [
@@ -368,10 +405,15 @@
       "  2. Reduzir Vestuario: R$ 154.14/mês\n",
       "  3. Reduzir Lazer: R$ 113.96/mês\n",
       "\n",
-      "ENDIVIDADOS:\n",
-      "  1. Reduzir Alimentacao_Fora: R$ 481.45/mês\n",
-      "  2. Reduzir Vestuario: R$ 230.25/mês\n",
-      "  3. Reduzir Lazer: R$ 184.75/mês\n",
+      "ENDIVIDADOS MODERADOS:\n",
+      "  1. Reduzir Alimentacao_Fora: R$ 432.53/mês\n",
+      "  2. Reduzir Vestuario: R$ 207.73/mês\n",
+      "  3. Reduzir Lazer: R$ 167.86/mês\n",
+      "\n",
+      "ENDIVIDADOS SEVEROS:\n",
+      "  1. Reduzir Alimentacao_Fora: R$ 619.91/mês\n",
+      "  2. Reduzir Vestuario: R$ 294.00/mês\n",
+      "  3. Reduzir Lazer: R$ 232.53/mês\n",
       "\n",
       "POUPADORES:\n",
       "  1. Reduzir Alimentacao_Fora: R$ 472.94/mês\n",
@@ -413,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "l1m2n3o4",
    "metadata": {},
    "outputs": [
@@ -451,13 +493,13 @@
       "\n",
       "- **Silhouette Score (0.26)**: Abaixo do target (0.5), indicando sobreposicao entre clusters\n",
       "- **Davies-Bouldin (1.20)**: Acima do target (1.0), confirmando clusters nao bem separados\n",
-      "- **Interpretabilidade**: Apesar das metricas, os 4 clusters sao claramente interpretaveis (Poupadores, Equilibrados, Em Alerta, Endividados)\n",
+      "- **Interpretabilidade**: Apesar das metricas, os 4 clusters sao claramente interpretaveis com perfis distintos de risco financeiro\n",
       "\n",
       "### Decisao\n",
       "\n",
       "Para o MVP, **aceitamos os resultados** pois:\n",
       "1. Os clusters tem significado de negocio claro\n",
-      "2. Permitem recomendacoes personalizadas por perfil\n",
+      "2. Permitem recomendacoes personalizadas por perfil e nivel de risco\n",
       "3. Melhorias podem ser feitas no Sprint 2 (ajuste de features, remocao de outliers)\n",
       "\n",
       "## Entregas Concluidas\n",
@@ -471,9 +513,9 @@
       "\n",
       "## Perfis Identificados\n",
       "\n",
-      "- **Endividados**: 59 usuarios (-88.6% poupanca)\n",
+      "- **Endividados Severos**: 59 usuarios (-88.6% poupanca)\n",
+      "- **Endividados Moderados**: 167 usuarios (-57.7% poupanca)\n",
       "- **Em Alerta**: 196 usuarios (-14.8% poupanca)\n",
-      "- **Endividados**: 167 usuarios (-57.7% poupanca)\n",
       "- **Poupadores**: 78 usuarios (+25.4% poupanca)\n",
       "\n",
       "## Top 3 Categorias para Economia\n",
@@ -498,6 +540,7 @@
       "- Testar remocao de outliers antes do clustering\n",
       "- Considerar adicionar features comportamentais\n",
       "- Avaliar normalizacao alternativa (MinMaxScaler)\n",
+      "- Refinar limites entre categorias de risco\n",
       "\n",
       "---\n",
       "*Sprint 1 concluido em Janeiro/2026*\n",
@@ -544,13 +587,13 @@
     "\n",
     "- **Silhouette Score ({silhouette_score:.2f})**: Abaixo do target ({silhouette_target}), indicando sobreposicao entre clusters\n",
     "- **Davies-Bouldin ({davies_bouldin:.2f})**: Acima do target ({db_target}), confirmando clusters nao bem separados\n",
-    "- **Interpretabilidade**: Apesar das metricas, os 4 clusters sao claramente interpretaveis (Poupadores, Equilibrados, Em Alerta, Endividados)\n",
+    "- **Interpretabilidade**: Apesar das metricas, os 4 clusters sao claramente interpretaveis com perfis distintos de risco financeiro\n",
     "\n",
     "### Decisao\n",
     "\n",
     "Para o MVP, **aceitamos os resultados** pois:\n",
     "1. Os clusters tem significado de negocio claro\n",
-    "2. Permitem recomendacoes personalizadas por perfil\n",
+    "2. Permitem recomendacoes personalizadas por perfil e nivel de risco\n",
     "3. Melhorias podem ser feitas no Sprint 2 (ajuste de features, remocao de outliers)\n",
     "\n",
     "## Entregas Concluidas\n",
@@ -566,11 +609,12 @@
     "\n",
     "\"\"\"\n",
     "\n",
-    "for cluster_id in sorted(usuarios_cluster['cluster'].unique()):\n",
-    "    nome = cluster_names[cluster_id]\n",
+    "# Ordenar por taxa de poupança (dos piores para os melhores)\n",
+    "perfis_ordenados = usuarios_cluster.groupby(['cluster', 'cluster_nome'])['taxa_poupanca'].mean().sort_values()\n",
+    "\n",
+    "for (cluster_id, nome), taxa in perfis_ordenados.items():\n",
     "    qtd = len(usuarios_cluster[usuarios_cluster['cluster'] == cluster_id])\n",
-    "    taxa = usuarios_cluster[usuarios_cluster['cluster'] == cluster_id]['taxa_poupanca'].mean() * 100\n",
-    "    review_md += f\"- **{nome}**: {qtd} usuarios ({taxa:+.1f}% poupanca)\\n\"\n",
+    "    review_md += f\"- **{nome}**: {qtd} usuarios ({taxa*100:+.1f}% poupanca)\\n\"\n",
     "\n",
     "review_md += \"\"\"\n",
     "## Top 3 Categorias para Economia\n",
@@ -597,6 +641,7 @@
     "- Testar remocao de outliers antes do clustering\n",
     "- Considerar adicionar features comportamentais\n",
     "- Avaliar normalizacao alternativa (MinMaxScaler)\n",
+    "- Refinar limites entre categorias de risco\n",
     "\n",
     "---\n",
     "*Sprint 1 concluido em Janeiro/2026*\n",
@@ -623,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "n1o2p3q4",
    "metadata": {},
    "outputs": [
@@ -665,7 +710,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   }
  },
