--- a/notebooks/03_Clustering.ipynb
+++ b/notebooks/03_Clustering.ipynb
@@ -49,6 +49,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "83061d37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python: 3.12.3 (main, Jun 22 2025, 11:00:19) [GCC 13.3.0]\n",
+      "Caminho: /home/celina/.pyenv/versions/economiza-ia-env/bin/python\n",
+      "✓ scikit-learn 1.8.0 instalado!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Teste rápido - verificar se sklearn está instalado\n",
+    "import sys\n",
+    "print(f\"Python: {sys.version}\")\n",
+    "print(f\"Caminho: {sys.executable}\")\n",
+    "\n",
+    "# Testar import básico\n",
+    "try:\n",
+    "    import sklearn\n",
+    "    print(f\"✓ scikit-learn {sklearn.__version__} instalado!\")\n",
+    "except ImportError as e:\n",
+    "    print(f\"✗ Erro: {e}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "342d504b",
    "metadata": {},
@@ -58,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bed784ec",
    "metadata": {},
    "outputs": [
@@ -164,7 +194,7 @@
        "4  2422.959028  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c45763ba",
    "metadata": {},
    "outputs": [
@@ -210,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "15b1f040",
    "metadata": {},
    "outputs": [
@@ -235,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cfbe6988",
    "metadata": {},
    "outputs": [
@@ -271,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "694a30ba",
    "metadata": {},
    "outputs": [
@@ -329,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "db241d09",
    "metadata": {},
    "outputs": [
@@ -388,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "fca629e7",
    "metadata": {},
    "outputs": [
@@ -435,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ec0699ac",
    "metadata": {},
    "outputs": [
@@ -480,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "93196fea",
    "metadata": {},
    "outputs": [
@@ -581,7 +611,7 @@
        "3        2227.406566  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "49ef3667",
    "metadata": {},
    "outputs": [
@@ -671,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "14c03b32",
    "metadata": {},
    "outputs": [
@@ -710,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f2d3c65f",
    "metadata": {},
    "outputs": [
@@ -738,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "739b9ee8",
    "metadata": {},
    "outputs": [
